--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <!-- Navbar -->
 <section id="navbar">
-    <h5>Kelvin</h5>
+    <h5>PAUL KAIRU</h5>
     <div>
         <a href="/" >Home</a>
         <a href="./about.html" >About</a>
@@ -26,37 +26,35 @@
 <!-- Landing -->
 <div class="landing">
     <div>
-        <h5>Hi am Kelvin</h5>
-        <p>Lorem Ipsum is simply dummy text of the printing<br> and typesetting industry. Lorem Ipsum has been the industry's standard dummy text<br> ever since the 1500s,</p>
-        <button>Call Me</button>
+        <h5>Hello there i'm Paul</h5>
+        <p>I have a great focus on backend development <br> this is a great advantage having studied at a good school which have played a great role to my career<br> i can as well work well on front end pefectly well</p>
+        <button>You can call me</button>
     </div>
     <div class="right">
-        <img src="./images/messi.png" alt="mylogo" />
+        <img src="./images/IMG-20240510-WA0068.jpg" alt="mylogo" />
     </div>
 </div>
-
-
 
   <!-- Education Section -->
   <section id="education" class="education-section">
     <h2 class="section-title">Education</h2>
     <div class="education-timeline">
       <div class="education-item">
-        <h3>Bachelor’s Degree in Information Technnology</h3>
-        <span class="institution">Multimedia University</span>
-        <span class="year">2016 - 2021</span>
-        <p>Graduated with honors, specializing in Software Engineering. Key courses included Data Structures, Algorithms, Web Development, and Database Systems.</p>
+        <h3>DEGREE IN AUTOMOTIVE ENGINEERING</h3>
+        <span class="institution">JOMO KENYATTA University</span>
+        <span class="year">2018 - 2022</span>
+        <p>Graduated with honors, specializing in Auto-mechanics Software . Key courses included Data Structures, Algorithms, Web Development, and Database Systems.</p>
       </div>
       <div class="education-item">
         <h3>College</h3>
         <span class="institution">Moringa School</span>
-        <span class="year">2021 - 2021</span>
+        <span class="year">2023 - 2024</span>
         <p>Learned web development with python, django, flask, javascript and angular.</p>
       </div>
       <div class="education-item">
         <h3>High School Diploma</h3>
-        <span class="institution">Chebara High School</span>
-        <span class="year">2012 - 2015</span>
+        <span class="institution">Gachika High School</span>
+        <span class="year">2013 - 2017</span>
         <p>Completed high school with a focus on Mathematics and Computer Studies, participated in coding competitions, and ranked top 10 in the region.</p>
       </div>
 
